<resources>
    <string name="app_name">DTH</string>
    <string name="action_account">Account</string>
    <string name="action_invite">Invite Friends</string>
    <string name="action_logout">Logout</string>
    <string name="action_feedback">Feedback</string>
    <string name="not_down">not down</string>
    <string name="down">down</string>
    <string name="facebook_app_id">697540903696104</string>
    <string name="fabric_api_key">086de2dcfb86fdb1fe42a8237369b8b68270c17c</string>
    <string name="parse_app_id">DYUzK3cb2qmKkGeVExRoe6nmj96SCP8fPPq3Ixhp</string>
    <string name="parse_server">"http://127.0.0.1:1337/parse"</string>
    <string name="parse_client_key">IZfr5myMCPIkZhA5BLSa42Z5IlMQf1qALFZbXmdc</string>
    <string name="me">Me</string>
    <string name="nearby">Nearby</string>
    <string name="facebook_button_details">We don\'t post anything to Facebook</string>
    <string name="eula_text">By creating an account you agree to the End User License Agreement and acknowledge that you have read it.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tap_below">(tap below to get started)</string>
    <string name="dth_button_desc">DTH is a button you press when you want to hang out with your friends.</string>
    <string name="welcome">Welcome</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="menu_search">Search</string>
    <string name="about">About</string>
    <string name="finished">finished</string>
    <string name="next">Next</string>
    <string name="need_to_know_in">Need to know in</string>
    <string name="DT">DT%1$s</string>
    <string name="finishes_in">finishes in %1$s</string>
    <string name="remove">remove</string>
    <string name="contacts">Contacts</string>
    <string name="friends">Friends</string>
    <string name="login_error">Login Error</string>
    <string name="connection_error">There was a connection problem</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="contacts_invite_promo">Invited friends to get cool DTH stuff \n10 = stickers\n25 = t-shirt</string>
    <string name="down_count">%1$s down</string>
    <string name="not_down_count">%1$s not down</string>
    <string name="dth_count">%1$s DTH</string>
    <string name="time_left">"%1$s left"</string>
    <string name="load_more">Load More…</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="search">Search…</string>
    <string name="visible_to_public">Also visible to nearby public</string>
    <string name="invited">invited</string>
    <string name="selected">selected</string>
    <string name="no_friends">Looks like you do\'t have any friends on DTH yet!</string>
</resources>
