<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">

    <TextView
        android:id="@+id/dt_create_title"
        fontPath="fonts/Braggadocio.ttf"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="64sp"
        tools:ignore="MissingPrefix"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/dt_create_edit"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="start"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/need_to_know_in"
            android:textSize="18sp"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/dt_create_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <Button
        android:id="@+id/dt_create_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/positive_button"
        android:text="@string/next"/>

</LinearLayout>