<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/event_create_title"
                fontPath="fonts/Braggadocio.ttf"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="48sp"
                tools:ignore="MissingPrefix"/>

            <EditText
                android:id="@+id/event_create_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_create_title"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="start"
                android:inputType="text"/>

            <LinearLayout
                android:id="@+id/dt_create_timer_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_create_edit"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/need_to_know_in"
                    android:textSize="18sp"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/event_create_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <Button
                android:id="@+id/event_create_next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dt_create_timer_container"
                android:layout_gravity="bottom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/positive_button"
                android:text="@string/next"/>

        </RelativeLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/event_create_suggestions_container"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/about_libraries_accent"
        android:visibility="gone"/>

</RelativeLayout>